crates/toml/tests/snapshots/invalid/table/duplicate-key-12.stderr
TOML parse error at line 4, column 4
  |
4 | [a.b]
  |    ^
duplicate key

---
TOML parse error at line 5, column 1
  |
5 | c = 2
  | ^
duplicate key
